@@ -1,3 +1,9 @@
+Thu Aug 18 16:28:19 UTC 2011  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * tests/DCPS/ConfigTransports/subscriber.cpp:
+
+          Changes missed with the commit from Thu Aug 18 01:47:27 UTC 2011.
+
 Thu Aug 18 16:15:14 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
 
         * tools/modeling/plugins/org.opendds.modeling.help/html/gettingstarted/maintopic.html:
